--- a/proyecto/src/application/vistaBotones.fxml
+++ b/proyecto/src/application/vistaBotones.fxml
@@ -1,35 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="330.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.vistaBotonesController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="342.0" prefWidth="647.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.vistaBotonesController">
    <children>
-      <ImageView fx:id="btnFacturacion" fitHeight="150.0" fitWidth="200.0" layoutX="14.0" layoutY="21.0" onMouseClicked="#btnFacturacion" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="btnFacturacion" fitHeight="150.0" fitWidth="200.0" layoutX="14.0" layoutY="44.0" onMouseClicked="#btnFacturacion" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../imagenes/FACTURACION.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="btnClientes" fitHeight="150.0" fitWidth="200.0" layoutX="220.0" layoutY="22.0" onMouseClicked="#btnClientes" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="btnClientes" fitHeight="150.0" fitWidth="200.0" layoutX="224.0" layoutY="43.0" onMouseClicked="#btnClientes" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../imagenes/CLIENTES.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="btnProductos" fitHeight="150.0" fitWidth="200.0" layoutX="426.0" layoutY="21.0" onMouseClicked="#btnProductos" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="btnProductos" fitHeight="150.0" fitWidth="200.0" layoutX="433.0" layoutY="44.0" onMouseClicked="#btnProductos" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../imagenes/PRODUCTOS.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="btnUsuarios" fitHeight="150.0" fitWidth="200.0" layoutX="220.0" layoutY="176.0" onMouseClicked="#btnUsuarios" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="btnUsuarios" fitHeight="150.0" fitWidth="200.0" layoutX="333.0" layoutY="194.0" onMouseClicked="#btnUsuarios" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../imagenes/USUARIOS.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="btnInformes" fitHeight="150.0" fitWidth="200.0" layoutX="14.0" layoutY="176.0" onMouseClicked="#btnInformes" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="btnInformes" fitHeight="150.0" fitWidth="200.0" layoutX="124.0" layoutY="194.0" onMouseClicked="#btnInformes" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../imagenes/INFORMES.png" />
          </image>
       </ImageView>
+      <Button fx:id="btnCerrar" layoutX="14.0" layoutY="8.0" mnemonicParsing="false" onMouseClicked="#btnCerrar" style="-fx-background-color: TRANSPARENT;" text="CERRAR SECCION" textFill="AQUA">
+         <font>
+            <Font name="Arial Black" size="12.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
