--- a/proyecto/src/application/vista5.fxml
+++ b/proyecto/src/application/vista5.fxml
@@ -12,21 +12,21 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.vista5Controller">
    <children>
       <Label layoutX="79.0" layoutY="24.0" text="PRODUCTOS">
          <font>
             <Font name="Arial Black" size="16.0" />
          </font>
       </Label>
-      <TableView layoutX="14.0" layoutY="61.0" prefHeight="254.0" prefWidth="670.0" AnchorPane.bottomAnchor="185.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="16.0" AnchorPane.topAnchor="61.0">
+      <TableView fx:id="Tablaview" layoutX="14.0" layoutY="61.0" onMouseClicked="#Tablaview" prefHeight="254.0" prefWidth="670.0" AnchorPane.bottomAnchor="185.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="16.0" AnchorPane.topAnchor="61.0">
          <columns>
-            <TableColumn id="columnabasic" prefWidth="68.0" style="-fx-background-color: #8BFAFF;" text="REFERENCIA" />
-            <TableColumn prefWidth="84.0" style="-fx-background-color: #8BFAFF;" text="DESCRIPCION" />
-            <TableColumn prefWidth="75.0" style="-fx-background-color: #8BFAFF;" text="CATEGORIA" />
-            <TableColumn prefWidth="75.0" style="-fx-background-color: #8BFAFF;" text="CANTIDAD" />
-            <TableColumn editable="false" prefWidth="75.0" sortable="false" style="-fx-background-color: #8BFAFF;" text="VALOR " />
-            <TableColumn prefWidth="75.0" style="-fx-background-color: #8BFAFF;" text="STOCK" />
+            <TableColumn id="columnabasic" fx:id="ReferenciaColumn" onEditCommit="#OnReferenciaColumn" prefWidth="68.0" style="-fx-background-color: #8BFAFF;" text="REFERENCIA" />
+            <TableColumn fx:id="DescripcionColumn" onEditCommit="#OnDescripcionColumn" prefWidth="84.0" style="-fx-background-color: #8BFAFF;" text="DESCRIPCION" />
+            <TableColumn fx:id="CategoriaColumn" onEditCommit="#OnCategoriaColumn" prefWidth="75.0" style="-fx-background-color: #8BFAFF;" text="CATEGORIA" />
+            <TableColumn fx:id="CantidadColumn" onEditCommit="#OnCantidadColumn" prefWidth="75.0" style="-fx-background-color: #8BFAFF;" text="CANTIDAD" />
+            <TableColumn fx:id="ValorColumn" editable="false" onEditCommit="#OnValorColumn" prefWidth="75.0" sortable="false" style="-fx-background-color: #8BFAFF;" text="VALOR " />
+            <TableColumn fx:id="StockColumn" onEditCommit="#OnStockColumn" prefWidth="75.0" style="-fx-background-color: #8BFAFF;" text="STOCK" />
          </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -42,7 +42,7 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="77.0" style="-fx-background-color: #62ccd0;" text="CARGAR" textFill="WHITE">
+            <Button fx:id="cargarBtn" mnemonicParsing="false" onMouseClicked="#cargarBtn" prefHeight="25.0" prefWidth="77.0" style="-fx-background-color: #62ccd0;" text="CARGAR" textFill="WHITE">
                <font>
                   <Font name="Arial Black" size="12.0" />
                </font>
@@ -50,7 +50,7 @@
                   <Insets left="15.0" right="15.0" />
                </GridPane.margin>
             </Button>
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="77.0" style="-fx-background-color: #00FF46;" text="ENVIAR" textFill="WHITE" GridPane.columnIndex="1">
+            <Button fx:id="enviarBtn" mnemonicParsing="false" onMouseClicked="#enviarBtn" prefHeight="25.0" prefWidth="77.0" style="-fx-background-color: #00FF46;" text="ENVIAR" textFill="WHITE" GridPane.columnIndex="1">
                <font>
                   <Font name="Arial Black" size="12.0" />
                </font>
@@ -61,7 +61,7 @@
                   <Insets left="15.0" right="15.0" />
                </GridPane.margin>
             </Button>
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="92.0" style="-fx-background-color: #FF000F#62ccd0;" text="ELIMINAR" textFill="WHITE" GridPane.columnIndex="2">
+            <Button fx:id="eliminarBtn" mnemonicParsing="false" onMouseClicked="#eliminarBtn" prefHeight="25.0" prefWidth="92.0" style="-fx-background-color: #FF000F#62ccd0;" text="ELIMINAR" textFill="WHITE" GridPane.columnIndex="2">
                <font>
                   <Font name="Arial Black" size="12.0" />
                </font>
@@ -83,7 +83,7 @@
             <RowConstraints maxHeight="44.0" minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <TextField fx:id="TextCedula" maxWidth="200.0" prefHeight="25.0" prefWidth="103.0" promptText="REFERENCIA">
+            <TextField fx:id="TextReferencia" maxWidth="200.0" prefHeight="25.0" prefWidth="103.0" promptText="REFERENCIA">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
@@ -91,27 +91,27 @@
                   <Insets left="5.0" right="5.0" />
                </GridPane.margin>
             </TextField>
-            <TextField fx:id="TextCity" maxWidth="200.0" promptText="VALOR" GridPane.rowIndex="1">
+            <TextField fx:id="TextValor" maxWidth="200.0" promptText="VALOR" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets left="5.0" right="5.0" />
                </GridPane.margin>
             </TextField>
-            <TextField fx:id="TextName" layoutX="10.0" layoutY="17.0" maxWidth="200.0" prefHeight="25.0" prefWidth="97.0" promptText="DESCRIPCION" GridPane.columnIndex="1">
+            <TextField fx:id="TextDescripcion" layoutX="10.0" layoutY="17.0" maxWidth="200.0" prefHeight="25.0" prefWidth="97.0" promptText="DESCRIPCION" GridPane.columnIndex="1">
                <GridPane.margin>
                   <Insets left="5.0" right="5.0" />
                </GridPane.margin>
             </TextField>
-            <TextField fx:id="TextUsername" layoutX="244.0" layoutY="17.0" maxWidth="200.0" promptText="STOCK" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <TextField fx:id="TextStock" layoutX="244.0" layoutY="17.0" maxWidth="200.0" promptText="STOCK" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets left="5.0" right="5.0" />
                </GridPane.margin>
             </TextField>
-            <TextField fx:id="TextLastName" maxWidth="200.0" promptText="CATEGORIA" GridPane.columnIndex="2">
+            <TextField fx:id="TextCategoria" maxWidth="200.0" promptText="CATEGORIA" GridPane.columnIndex="2">
                <GridPane.margin>
                   <Insets bottom="3.0" left="5.0" top="5.0" />
                </GridPane.margin>
             </TextField>
-            <TextField prefHeight="25.0" prefWidth="82.0" promptText="CANTIDAD" GridPane.columnIndex="3">
+            <TextField fx:id="TextCantidad" prefHeight="25.0" prefWidth="82.0" promptText="CANTIDAD" GridPane.columnIndex="3">
                <GridPane.margin>
                   <Insets left="5.0" right="5.0" />
                </GridPane.margin>
