--- a/proyecto/src/application/vista5.fxml
+++ b/proyecto/src/application/vista5.fxml
@@ -21,21 +21,21 @@
       </Label>
       <TableView fx:id="Tablaview" layoutX="14.0" layoutY="61.0" onMouseClicked="#Tablaview" prefHeight="254.0" prefWidth="670.0" AnchorPane.bottomAnchor="185.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="16.0" AnchorPane.topAnchor="61.0">
          <columns>
-            <TableColumn id="columnabasic" fx:id="ReferenciaColumn" onEditCommit="#OnReferenciaColumn" prefWidth="68.0" style="-fx-background-color: #8BFAFF;" text="REFERENCIA" />
+            <TableColumn fx:id="CodProductoColumn" onEditCommit="#OnCodProducto" prefWidth="68.0" style="-fx-background-color: #8BFAFF;" text="CODPRODUCTO" />
             <TableColumn fx:id="DescripcionColumn" onEditCommit="#OnDescripcionColumn" prefWidth="84.0" style="-fx-background-color: #8BFAFF;" text="DESCRIPCION" />
             <TableColumn fx:id="CategoriaColumn" onEditCommit="#OnCategoriaColumn" prefWidth="75.0" style="-fx-background-color: #8BFAFF;" text="CATEGORIA" />
-            <TableColumn fx:id="CantidadColumn" onEditCommit="#OnCantidadColumn" prefWidth="75.0" style="-fx-background-color: #8BFAFF;" text="CANTIDAD" />
-            <TableColumn fx:id="ValorColumn" editable="false" onEditCommit="#OnValorColumn" prefWidth="75.0" sortable="false" style="-fx-background-color: #8BFAFF;" text="VALOR " />
             <TableColumn fx:id="StockColumn" onEditCommit="#OnStockColumn" prefWidth="75.0" style="-fx-background-color: #8BFAFF;" text="STOCK" />
+            <TableColumn fx:id="ValorColumn" editable="false" onEditCommit="#OnValorColumn" prefWidth="75.0" sortable="false" style="-fx-background-color: #8BFAFF;" text="VALOR " />
          </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
-      <GridPane layoutX="29.0" layoutY="443.0" prefHeight="30.0" prefWidth="337.0" AnchorPane.bottomAnchor="27.0">
+      <GridPane layoutX="29.0" layoutY="443.0" prefHeight="30.0" prefWidth="503.0" AnchorPane.bottomAnchor="27.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="113.0" minWidth="10.0" prefWidth="113.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="112.0" minWidth="10.0" prefWidth="112.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
          </columnConstraints>
          <rowConstraints>
@@ -50,7 +50,7 @@
                   <Insets left="15.0" right="15.0" />
                </GridPane.margin>
             </Button>
-            <Button fx:id="enviarBtn" mnemonicParsing="false" onMouseClicked="#enviarBtn" prefHeight="25.0" prefWidth="77.0" style="-fx-background-color: #00FF46;" text="ENVIAR" textFill="WHITE" GridPane.columnIndex="1">
+            <Button fx:id="crearBtn" mnemonicParsing="false" onMouseClicked="#crearBtn" prefHeight="25.0" prefWidth="77.0" style="-fx-background-color: #00FF46;" text="CREAR" textFill="WHITE" GridPane.columnIndex="1">
                <font>
                   <Font name="Arial Black" size="12.0" />
                </font>
@@ -69,13 +69,20 @@
                   <Insets left="15.0" right="15.0" />
                </GridPane.margin>
             </Button>
+            <Button fx:id="actualizarBtn" mnemonicParsing="false" onMouseClicked="#actualizarBtn" style="-fx-background-color: #FF9E00;" text="ACTUALIZAR" textFill="WHITE" GridPane.columnIndex="3">
+               <font>
+                  <Font name="Arial Black" size="12.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets left="15.0" right="15.0" />
+               </GridPane.margin>
+            </Button>
          </children>
       </GridPane>
-      <GridPane layoutX="29.0" layoutY="321.0" prefHeight="106.0" prefWidth="520.0" AnchorPane.bottomAnchor="73.0" AnchorPane.leftAnchor="29.0">
+      <GridPane layoutX="29.0" layoutY="321.0" prefHeight="106.0" prefWidth="407.0" AnchorPane.bottomAnchor="73.0" AnchorPane.leftAnchor="29.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="147.0" minWidth="10.0" prefWidth="147.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="125.0" minWidth="10.0" prefWidth="113.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
          </columnConstraints>
          <rowConstraints>
@@ -83,7 +90,7 @@
             <RowConstraints maxHeight="44.0" minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <TextField fx:id="TextReferencia" maxWidth="200.0" prefHeight="25.0" prefWidth="103.0" promptText="REFERENCIA">
+            <TextField fx:id="TextCodProducto" maxWidth="200.0" prefHeight="25.0" prefWidth="103.0" promptText="CODPRODUCTO">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
@@ -91,7 +98,7 @@
                   <Insets left="5.0" right="5.0" />
                </GridPane.margin>
             </TextField>
-            <TextField fx:id="TextValor" maxWidth="200.0" promptText="VALOR" GridPane.rowIndex="1">
+            <TextField fx:id="TextValor" maxWidth="200.0" promptText="VALOR" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets left="5.0" right="5.0" />
                </GridPane.margin>
@@ -101,7 +108,7 @@
                   <Insets left="5.0" right="5.0" />
                </GridPane.margin>
             </TextField>
-            <TextField fx:id="TextStock" layoutX="244.0" layoutY="17.0" maxWidth="200.0" promptText="STOCK" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <TextField fx:id="TextStock" layoutX="244.0" layoutY="17.0" maxWidth="200.0" promptText="STOCK" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets left="5.0" right="5.0" />
                </GridPane.margin>
@@ -109,11 +116,6 @@
             <TextField fx:id="TextCategoria" maxWidth="200.0" promptText="CATEGORIA" GridPane.columnIndex="2">
                <GridPane.margin>
                   <Insets bottom="3.0" left="5.0" top="5.0" />
-               </GridPane.margin>
-            </TextField>
-            <TextField fx:id="TextCantidad" prefHeight="25.0" prefWidth="82.0" promptText="CANTIDAD" GridPane.columnIndex="3">
-               <GridPane.margin>
-                  <Insets left="5.0" right="5.0" />
                </GridPane.margin>
             </TextField>
          </children>
