--- a/proyecto/src/application/vista3.fxml
+++ b/proyecto/src/application/vista3.fxml
@@ -1,44 +1,116 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.vista3Controller">
    <children>
-      <Label layoutX="79.0" layoutY="24.0" text="CLIENTE">
+      <Label layoutX="79.0" layoutY="24.0" text="CLIENTES" AnchorPane.topAnchor="24.0">
          <font>
-            <Font name="Arial Rounded MT Bold" size="16.0" />
+            <Font name="Arial Black" size="16.0" />
          </font>
       </Label>
-      <TextField fx:id="txtCedula" layoutX="91.0" layoutY="96.0" promptText="Cedula" />
-      <Label layoutX="96.0" layoutY="71.0" text="Cedula" />
-      <TextField fx:id="txtApellido" layoutX="359.0" layoutY="167.0" promptText="Apellido" />
-      <Label layoutX="361.0" layoutY="142.0" text="Apellido" />
-      <Label layoutX="93.0" layoutY="142.0" text="Nombre" />
-      <TextField fx:id="txtNombre" layoutX="91.0" layoutY="167.0" promptText="Nombre" />
-      <Label layoutX="90.0" layoutY="223.0" text="Direccion" />
-      <TextField fx:id="txtDireccion" layoutX="91.0" layoutY="247.0" promptText="Direccion" />
-      <Label layoutX="96.0" layoutY="292.0" text="Correo" />
-      <TextField fx:id="txtCorreo" layoutX="91.0" layoutY="316.0" promptText="Correo" />
-      <Label layoutX="359.0" layoutY="223.0" text="Telefono" />
-      <TextField fx:id="txtTelefono" layoutX="359.0" layoutY="247.0" promptText="Telefono" />
-      <Button fx:id="btnActualizar" layoutX="296.0" layoutY="316.0" mnemonicParsing="false" style="-fx-background-color: #36FF00;" text="ACTUALIZAR" textFill="WHITE">
-         <font>
-            <Font name="Arial Black" size="12.0" />
-         </font>
-      </Button>
-      <Button fx:id="btnBuscar" layoutX="376.0" layoutY="96.0" mnemonicParsing="false" style="-fx-background-color: #10ffff;" text="BUSCAR" textFill="WHITE">
-         <font>
-            <Font name="Arial Black" size="12.0" />
-         </font>
-      </Button>
-      <Button fx:id="btnEnviar" layoutX="440.0" layoutY="316.0" mnemonicParsing="false" text="ENVIAR">
-         <font>
-            <Font name="Arial Black" size="12.0" />
-         </font>
-      </Button>
+      <TableView fx:id="Tablaview" layoutX="14.0" layoutY="61.0" onMouseClicked="#Tablaview" prefHeight="254.0" prefWidth="670.0" AnchorPane.bottomAnchor="185.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="16.0" AnchorPane.topAnchor="61.0">
+         <columns>
+            <TableColumn fx:id="CedulaColumn" onEditCommit="#OnCedula" prefWidth="68.0" style="-fx-background-color: #8BFAFF;" text="CEDULA" />
+            <TableColumn fx:id="NombreColumn" onEditCommit="#OnNombre" prefWidth="84.0" style="-fx-background-color: #8BFAFF;" text="NOMBRE" />
+            <TableColumn fx:id="ApellidoColumn" onEditCommit="#OnApellido" prefWidth="75.0" style="-fx-background-color: #8BFAFF;" text="APELLIDO" />
+            <TableColumn fx:id="DireccionColumn" onEditCommit="#OnDireccion" prefWidth="75.0" style="-fx-background-color: #8BFAFF;" text="DIRECCION" />
+            <TableColumn fx:id="TelefonoColumn" editable="false" onEditCommit="#OnTelefono" prefWidth="75.0" sortable="false" style="-fx-background-color: #8BFAFF;" text="TELEFONO" />
+         </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
+      <GridPane layoutX="29.0" layoutY="321.0" prefHeight="106.0" prefWidth="407.0" AnchorPane.bottomAnchor="73.0" AnchorPane.leftAnchor="29.0">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="147.0" minWidth="10.0" prefWidth="147.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="125.0" minWidth="10.0" prefWidth="113.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints maxHeight="63.0" minHeight="10.0" prefHeight="61.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="44.0" minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+         <children>
+            <TextField fx:id="TextCedula" promptText="CEDULA">
+               <GridPane.margin>
+                  <Insets left="5.0" right="5.0" />
+               </GridPane.margin></TextField>
+            <TextField fx:id="TextNombre" promptText="NOMBRE" GridPane.columnIndex="1">
+               <GridPane.margin>
+                  <Insets left="5.0" right="5.0" />
+               </GridPane.margin></TextField>
+            <TextField fx:id="TextApellido" promptText="APELLIDO" GridPane.columnIndex="2">
+               <GridPane.margin>
+                  <Insets left="5.0" top="5.0" />
+               </GridPane.margin></TextField>
+            <TextField fx:id="TextDireccion" promptText="DIRECCION" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets left="5.0" right="5.0" />
+               </GridPane.margin></TextField>
+            <TextField fx:id="TextTelefono" promptText="TELEFONO" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets left="5.0" right="5.0" />
+               </GridPane.margin></TextField>
+         </children>
+      </GridPane>
+      <GridPane layoutX="29.0" layoutY="439.0" prefHeight="30.0" prefWidth="503.0" AnchorPane.bottomAnchor="31.0">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="113.0" minWidth="10.0" prefWidth="113.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="112.0" minWidth="10.0" prefWidth="112.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+         <children>
+            <Button fx:id="cargarBtn" mnemonicParsing="false" onMouseClicked="#cargarBtn" prefHeight="25.0" prefWidth="77.0" style="-fx-background-color: #62ccd0;" text="CARGAR" textFill="WHITE">
+               <font>
+                  <Font name="Arial Black" size="12.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets left="15.0" right="15.0" />
+               </GridPane.margin>
+            </Button>
+            <Button fx:id="crearBtn" mnemonicParsing="false" onMouseClicked="#crearBtn" prefHeight="25.0" prefWidth="77.0" style="-fx-background-color: #00FF46;" text="CREAR" textFill="WHITE" GridPane.columnIndex="1">
+               <font>
+                  <Font name="Arial Black" size="12.0" />
+               </font>
+               <padding>
+                  <Insets left="5.0" />
+               </padding>
+               <GridPane.margin>
+                  <Insets left="15.0" right="15.0" />
+               </GridPane.margin>
+            </Button>
+            <Button fx:id="eliminarBtn" mnemonicParsing="false" onMouseClicked="#eliminarBtn" prefHeight="25.0" prefWidth="92.0" style="-fx-background-color: #FF000F#62ccd0;" text="ELIMINAR" textFill="WHITE" GridPane.columnIndex="2">
+               <font>
+                  <Font name="Arial Black" size="12.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets left="15.0" right="15.0" />
+               </GridPane.margin>
+            </Button>
+            <Button fx:id="actualizarBtn" mnemonicParsing="false" onMouseClicked="#actualizarBtn" style="-fx-background-color: #FF9E00;" text="ACTUALIZAR" textFill="WHITE" GridPane.columnIndex="3">
+               <font>
+                  <Font name="Arial Black" size="12.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets left="15.0" right="15.0" />
+               </GridPane.margin>
+            </Button>
+         </children>
+      </GridPane>
    </children>
 </AnchorPane>
