--- a/proyecto/src/application/vista4.fxml
+++ b/proyecto/src/application/vista4.fxml
@@ -3,8 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -14,14 +12,14 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.vista4Controller">
    <children>
       <Label layoutX="29.0" layoutY="33.0" text="USUARIOS" AnchorPane.leftAnchor="29.0" AnchorPane.rightAnchor="576.0">
          <font>
             <Font name="Arial Black" size="16.0" />
          </font>
       </Label>
-      <GridPane layoutX="20.0" layoutY="290.0" prefHeight="106.0" prefWidth="520.0" AnchorPane.bottomAnchor="104.0" AnchorPane.leftAnchor="20.0">
+      <GridPane layoutX="15.0" layoutY="321.0" prefHeight="106.0" prefWidth="520.0" AnchorPane.bottomAnchor="73.0" AnchorPane.leftAnchor="15.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="147.0" minWidth="10.0" prefWidth="147.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="125.0" minWidth="10.0" prefWidth="113.0" />
@@ -33,7 +31,7 @@
             <RowConstraints maxHeight="44.0" minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <TextField fx:id="TextCedula" maxWidth="200.0" prefHeight="25.0" prefWidth="103.0" promptText="CEDULA">
+            <TextField fx:id="TextCedUsuario" maxWidth="200.0" prefHeight="25.0" prefWidth="103.0" promptText="CEDULA">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
@@ -41,76 +39,66 @@
                   <Insets left="5.0" right="5.0" />
                </GridPane.margin>
             </TextField>
-            <TextField fx:id="TextCity" maxWidth="200.0" promptText="TELEFONO" GridPane.rowIndex="1">
+            <TextField fx:id="TextTelefono" maxWidth="200.0" promptText="TELEFONO" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets left="5.0" right="5.0" />
                </GridPane.margin>
             </TextField>
-            <TextField fx:id="TextName" layoutX="10.0" layoutY="17.0" maxWidth="200.0" prefHeight="25.0" prefWidth="97.0" promptText="NOMBRE" GridPane.columnIndex="1">
+            <TextField fx:id="TextNombre" layoutX="10.0" layoutY="17.0" maxWidth="200.0" prefHeight="25.0" prefWidth="97.0" promptText="NOMBRE" GridPane.columnIndex="1">
                <GridPane.margin>
                   <Insets left="5.0" right="5.0" />
                </GridPane.margin>
             </TextField>
-            <TextField fx:id="TextUsername" layoutX="244.0" layoutY="17.0" maxWidth="200.0" promptText="USUARIO" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <TextField fx:id="TextUsuario" layoutX="244.0" layoutY="17.0" maxWidth="200.0" promptText="USUARIO" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets left="5.0" right="5.0" />
                </GridPane.margin>
             </TextField>
-            <TextField fx:id="TextPassword" maxWidth="200.0" promptText="CONTRASEÑA" GridPane.columnIndex="2" GridPane.rowIndex="1">
+            <TextField fx:id="TextContraseña" maxWidth="200.0" promptText="CONTRASEÑA" GridPane.columnIndex="2" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets left="5.0" right="5.0" />
                </GridPane.margin>
             </TextField>
-            <TextField fx:id="TextLastName" maxWidth="200.0" promptText="APELLIDO" GridPane.columnIndex="2">
+            <TextField fx:id="TextApellido" maxWidth="200.0" prefHeight="28.0" prefWidth="112.0" promptText="APELLIDO" GridPane.columnIndex="2">
                <GridPane.margin>
                   <Insets bottom="3.0" left="5.0" top="5.0" />
                </GridPane.margin>
             </TextField>
-            <MenuButton mnemonicParsing="false" prefHeight="25.0" prefWidth="92.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #62ccd0;" text="CARGO" textFill="#62ccd0" GridPane.columnIndex="3" GridPane.rowIndex="1">
-              <items>
-                <MenuItem mnemonicParsing="false" text="ADMINISTRADOR" />
-                <MenuItem mnemonicParsing="false" text="VENDEDOR" />
-              </items>
-               <GridPane.margin>
-                  <Insets left="20.0" />
-               </GridPane.margin>
-               <font>
-                  <Font name="Arial Black" size="12.0" />
-               </font>
-            </MenuButton>
-            <TextField prefHeight="25.0" prefWidth="82.0" promptText="DIRECCION" GridPane.columnIndex="3">
+            <TextField fx:id="TextDireccion" prefHeight="25.0" prefWidth="82.0" promptText="DIRECCION" GridPane.columnIndex="3">
                <GridPane.margin>
                   <Insets left="5.0" right="5.0" />
                </GridPane.margin>
             </TextField>
+            <TextField fx:id="TextCargo" promptText="CARGO" GridPane.columnIndex="3" GridPane.rowIndex="1" />
          </children>
       </GridPane>
-      <TableView accessibleRole="CONTEXT_MENU" layoutX="9.0" layoutY="83.0" prefHeight="213.0" prefWidth="684.0" AnchorPane.bottomAnchor="204.0" AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="7.0" AnchorPane.topAnchor="83.0">
+      <TableView fx:id="Tablaview" accessibleRole="CONTEXT_MENU" layoutX="9.0" layoutY="83.0" prefHeight="247.0" prefWidth="684.0" AnchorPane.bottomAnchor="170.0" AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="7.0" AnchorPane.topAnchor="83.0">
          <columns>
-            <TableColumn id="columnabasic" prefWidth="68.0" style="-fx-background-color: #8BFAFF;" text="CEDULA" />
-            <TableColumn prefWidth="84.0" style="-fx-background-color: #8BFAFF;" text="NOMBRE" />
-            <TableColumn prefWidth="75.0" style="-fx-background-color: #8BFAFF;" text="APELLIDO" />
-            <TableColumn prefWidth="75.0" style="-fx-background-color: #8BFAFF;" text="DIRCCION" />
-            <TableColumn editable="false" prefWidth="75.0" sortable="false" style="-fx-background-color: #8BFAFF;" text="TELEFONO" />
-            <TableColumn prefWidth="75.0" style="-fx-background-color: #8BFAFF;" text="USUARIO" />
-            <TableColumn prefWidth="75.0" style="-fx-background-color: #8BFAFF;" text="CONTRASEÑA" />
-            <TableColumn prefWidth="75.0" style="-fx-background-color: #8BFAFF;" text="CARGO" />
+            <TableColumn id="columnabasic" fx:id="CedUsuarioColumn" onEditCommit="#OnCedUsuario" prefWidth="68.0" style="-fx-background-color: #8BFAFF;" text="CEDULA" />
+            <TableColumn fx:id="NombreColumn" onEditCommit="#OnNombre" prefWidth="84.0" style="-fx-background-color: #8BFAFF;" text="NOMBRE" />
+            <TableColumn fx:id="ApellidoColumn" onEditCommit="#OnApellido" prefWidth="75.0" style="-fx-background-color: #8BFAFF;" text="APELLIDO" />
+            <TableColumn fx:id="DireccionColumn" onEditCommit="#OnDireccion" prefWidth="75.0" style="-fx-background-color: #8BFAFF;" text="DIRECCION" />
+            <TableColumn fx:id="TelefonoColumn" editable="false" onEditCommit="#OnTelefono" prefWidth="75.0" sortable="false" style="-fx-background-color: #8BFAFF;" text="TELEFONO" />
+            <TableColumn fx:id="UsuarioColumn" onEditCommit="#OnUsuario" prefWidth="75.0" style="-fx-background-color: #8BFAFF;" text="USUARIO" />
+            <TableColumn fx:id="ContraseñaColumn" onEditCommit="#OnContraseña" prefWidth="75.0" style="-fx-background-color: #8BFAFF;" text="CONTRASEÑA" />
+            <TableColumn fx:id="CargoColumn" onEditCommit="#OnCargo" prefWidth="75.0" style="-fx-background-color: #8BFAFF;" text="CARGO" />
          </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
-      <GridPane layoutX="20.0" layoutY="437.0" prefHeight="30.0" prefWidth="337.0" AnchorPane.bottomAnchor="33.0">
-        <columnConstraints>
+      <GridPane layoutX="15.0" layoutY="433.0" prefHeight="30.0" prefWidth="503.0" AnchorPane.bottomAnchor="23.0">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="113.0" minWidth="10.0" prefWidth="113.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="112.0" minWidth="10.0" prefWidth="112.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         </rowConstraints>
          <children>
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="77.0" style="-fx-background-color: #62ccd0;" text="CARGAR" textFill="WHITE">
+            <Button fx:id="cargarBtn" mnemonicParsing="false" onMouseClicked="#cargarBtn" prefHeight="25.0" prefWidth="77.0" style="-fx-background-color: #62ccd0;" text="CARGAR" textFill="WHITE">
                <font>
                   <Font name="Arial Black" size="12.0" />
                </font>
@@ -118,7 +106,7 @@
                   <Insets left="15.0" right="15.0" />
                </GridPane.margin>
             </Button>
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="77.0" style="-fx-background-color: #00FF46;" text="ENVIAR" textFill="WHITE" GridPane.columnIndex="1">
+            <Button fx:id="crearBtn" mnemonicParsing="false" onMouseClicked="#crearBtn" prefHeight="25.0" prefWidth="77.0" style="-fx-background-color: #00FF46;" text="CREAR" textFill="WHITE" GridPane.columnIndex="1">
                <font>
                   <Font name="Arial Black" size="12.0" />
                </font>
@@ -129,7 +117,15 @@
                   <Insets left="15.0" right="15.0" />
                </GridPane.margin>
             </Button>
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="92.0" style="-fx-background-color: #FF000F#62ccd0;" text="ELIMINAR" textFill="WHITE" GridPane.columnIndex="2">
+            <Button fx:id="eliminarBtn" mnemonicParsing="false" onMouseClicked="#eliminarBtn" prefHeight="25.0" prefWidth="92.0" style="-fx-background-color: #FF000F#62ccd0;" text="ELIMINAR" textFill="WHITE" GridPane.columnIndex="2">
+               <font>
+                  <Font name="Arial Black" size="12.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets left="15.0" right="15.0" />
+               </GridPane.margin>
+            </Button>
+            <Button fx:id="actualizarBtn" mnemonicParsing="false" onMouseClicked="#actualizarBtn" style="-fx-background-color: #FF9E00;" text="ACTUALIZAR" textFill="WHITE" GridPane.columnIndex="3">
                <font>
                   <Font name="Arial Black" size="12.0" />
                </font>
