--- a/proyecto/src/application/Cliente.fxml
+++ b/proyecto/src/application/Cliente.fxml
@@ -6,24 +6,37 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.vista4Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ClienteController">
    <children>
-      <Label layoutX="29.0" layoutY="33.0" text="USUARIOS" AnchorPane.leftAnchor="29.0" AnchorPane.rightAnchor="576.0">
+      <Label layoutX="79.0" layoutY="24.0" text="CLIENTES" AnchorPane.topAnchor="24.0">
          <font>
             <Font name="Arial Black" size="16.0" />
          </font>
       </Label>
-      <GridPane layoutX="15.0" layoutY="321.0" prefHeight="106.0" prefWidth="520.0" AnchorPane.bottomAnchor="73.0" AnchorPane.leftAnchor="15.0">
+      <TableView fx:id="Tablaview" layoutX="14.0" layoutY="61.0" onMouseClicked="#Tablaview" prefHeight="254.0" prefWidth="670.0" AnchorPane.bottomAnchor="185.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="16.0" AnchorPane.topAnchor="61.0">
+         <columns>
+            <TableColumn fx:id="CedulaColumn" onEditCommit="#OnCedula" prefWidth="68.0" style="-fx-background-color: #8BFAFF;" text="CEDULA" />
+            <TableColumn fx:id="NombreColumn" onEditCommit="#OnNombre" prefWidth="84.0" style="-fx-background-color: #8BFAFF;" text="NOMBRE" />
+            <TableColumn fx:id="ApellidoColumn" onEditCommit="#OnApellido" prefWidth="75.0" style="-fx-background-color: #8BFAFF;" text="APELLIDO" />
+            <TableColumn fx:id="DireccionColumn" onEditCommit="#OnDireccion" prefWidth="75.0" style="-fx-background-color: #8BFAFF;" text="DIRECCION" />
+            <TableColumn fx:id="TelefonoColumn" editable="false" onEditCommit="#OnTelefono" prefWidth="75.0" sortable="false" style="-fx-background-color: #8BFAFF;" text="TELEFONO" />
+         </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
+      <GridPane layoutX="29.0" layoutY="321.0" prefHeight="106.0" prefWidth="407.0" AnchorPane.bottomAnchor="73.0" AnchorPane.leftAnchor="29.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="147.0" minWidth="10.0" prefWidth="147.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="125.0" minWidth="10.0" prefWidth="113.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
          </columnConstraints>
          <rowConstraints>
@@ -31,63 +44,29 @@
             <RowConstraints maxHeight="44.0" minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <TextField fx:id="TextCedUsuario" maxWidth="200.0" prefHeight="25.0" prefWidth="103.0" promptText="CEDULA">
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
+            <TextField fx:id="TextCedula" promptText="CEDULA">
                <GridPane.margin>
                   <Insets left="5.0" right="5.0" />
-               </GridPane.margin>
-            </TextField>
-            <TextField fx:id="TextTelefono" maxWidth="200.0" promptText="TELEFONO" GridPane.rowIndex="1">
+               </GridPane.margin></TextField>
+            <TextField fx:id="TextNombre" promptText="NOMBRE" GridPane.columnIndex="1">
                <GridPane.margin>
                   <Insets left="5.0" right="5.0" />
-               </GridPane.margin>
-            </TextField>
-            <TextField fx:id="TextNombre" layoutX="10.0" layoutY="17.0" maxWidth="200.0" prefHeight="25.0" prefWidth="97.0" promptText="NOMBRE" GridPane.columnIndex="1">
+               </GridPane.margin></TextField>
+            <TextField fx:id="TextApellido" promptText="APELLIDO" GridPane.columnIndex="2">
+               <GridPane.margin>
+                  <Insets left="5.0" top="5.0" />
+               </GridPane.margin></TextField>
+            <TextField fx:id="TextDireccion" promptText="DIRECCION" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets left="5.0" right="5.0" />
-               </GridPane.margin>
-            </TextField>
-            <TextField fx:id="TextUsuario" layoutX="244.0" layoutY="17.0" maxWidth="200.0" promptText="USUARIO" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               </GridPane.margin></TextField>
+            <TextField fx:id="TextTelefono" promptText="TELEFONO" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets left="5.0" right="5.0" />
-               </GridPane.margin>
-            </TextField>
-            <TextField fx:id="TextContraseña" maxWidth="200.0" promptText="CONTRASEÑA" GridPane.columnIndex="2" GridPane.rowIndex="1">
-               <GridPane.margin>
-                  <Insets left="5.0" right="5.0" />
-               </GridPane.margin>
-            </TextField>
-            <TextField fx:id="TextApellido" maxWidth="200.0" prefHeight="28.0" prefWidth="112.0" promptText="APELLIDO" GridPane.columnIndex="2">
-               <GridPane.margin>
-                  <Insets bottom="3.0" left="5.0" top="5.0" />
-               </GridPane.margin>
-            </TextField>
-            <TextField fx:id="TextDireccion" prefHeight="25.0" prefWidth="82.0" promptText="DIRECCION" GridPane.columnIndex="3">
-               <GridPane.margin>
-                  <Insets left="5.0" right="5.0" />
-               </GridPane.margin>
-            </TextField>
-            <TextField fx:id="TextCargo" promptText="CARGO" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+               </GridPane.margin></TextField>
          </children>
       </GridPane>
-      <TableView fx:id="Tablaview" accessibleRole="CONTEXT_MENU" layoutX="9.0" layoutY="83.0" prefHeight="247.0" prefWidth="684.0" AnchorPane.bottomAnchor="170.0" AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="7.0" AnchorPane.topAnchor="83.0">
-         <columns>
-            <TableColumn id="columnabasic" fx:id="CedUsuarioColumn" onEditCommit="#OnCedUsuario" prefWidth="68.0" style="-fx-background-color: #8BFAFF;" text="CEDULA" />
-            <TableColumn fx:id="NombreColumn" onEditCommit="#OnNombre" prefWidth="84.0" style="-fx-background-color: #8BFAFF;" text="NOMBRE" />
-            <TableColumn fx:id="ApellidoColumn" onEditCommit="#OnApellido" prefWidth="75.0" style="-fx-background-color: #8BFAFF;" text="APELLIDO" />
-            <TableColumn fx:id="DireccionColumn" onEditCommit="#OnDireccion" prefWidth="75.0" style="-fx-background-color: #8BFAFF;" text="DIRECCION" />
-            <TableColumn fx:id="TelefonoColumn" editable="false" onEditCommit="#OnTelefono" prefWidth="75.0" sortable="false" style="-fx-background-color: #8BFAFF;" text="TELEFONO" />
-            <TableColumn fx:id="UsuarioColumn" onEditCommit="#OnUsuario" prefWidth="75.0" style="-fx-background-color: #8BFAFF;" text="USUARIO" />
-            <TableColumn fx:id="ContraseñaColumn" onEditCommit="#OnContraseña" prefWidth="75.0" style="-fx-background-color: #8BFAFF;" text="CONTRASEÑA" />
-            <TableColumn fx:id="CargoColumn" onEditCommit="#OnCargo" prefWidth="75.0" style="-fx-background-color: #8BFAFF;" text="CARGO" />
-         </columns>
-         <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-         </columnResizePolicy>
-      </TableView>
-      <GridPane layoutX="15.0" layoutY="433.0" prefHeight="30.0" prefWidth="503.0" AnchorPane.bottomAnchor="23.0">
+      <GridPane layoutX="29.0" layoutY="439.0" prefHeight="30.0" prefWidth="503.0" AnchorPane.bottomAnchor="31.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="113.0" minWidth="10.0" prefWidth="113.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="112.0" minWidth="10.0" prefWidth="112.0" />
@@ -135,5 +114,10 @@
             </Button>
          </children>
       </GridPane>
+      <ImageView fx:id="btnCerrar" fitHeight="25.0" fitWidth="23.0" layoutX="39.0" layoutY="25.0" onMouseClicked="#btnCerrar" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../imagenes/atras.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
