--- a/proyecto/src/application/Informe.fxml
+++ b/proyecto/src/application/Informe.fxml
@@ -73,5 +73,10 @@
             <Font name="Arial Black" size="18.0" />
          </font>
       </Label>
+      <ImageView fx:id="btnCerrar" fitHeight="25.0" fitWidth="23.0" layoutX="28.0" layoutY="22.0" onMouseClicked="#btnCerrar" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../imagenes/atras.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
