--- a/proyecto/src/application/Producto.fxml
+++ b/proyecto/src/application/Producto.fxml
@@ -6,22 +6,24 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.vista5Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ProductoController">
    <children>
       <Label layoutX="79.0" layoutY="24.0" text="PRODUCTOS">
          <font>
             <Font name="Arial Black" size="16.0" />
          </font>
       </Label>
-      <TableView fx:id="Tablaview" layoutX="14.0" layoutY="61.0" onMouseClicked="#Tablaview" prefHeight="254.0" prefWidth="670.0" AnchorPane.bottomAnchor="185.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="16.0" AnchorPane.topAnchor="61.0">
+      <TableView fx:id="Tablaview" editable="true" layoutX="14.0" layoutY="61.0" onMouseClicked="#Tablaview" prefHeight="254.0" prefWidth="670.0" AnchorPane.bottomAnchor="185.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="16.0" AnchorPane.topAnchor="61.0">
          <columns>
-            <TableColumn fx:id="CodProductoColumn" onEditCommit="#OnCodProducto" prefWidth="68.0" style="-fx-background-color: #8BFAFF;" text="CODPRODUCTO" />
+            <TableColumn fx:id="ReferenciaColumn" onEditCommit="#OnReferencia" prefWidth="68.0" style="-fx-background-color: #8BFAFF;" text="REFERENCIA" />
             <TableColumn fx:id="DescripcionColumn" onEditCommit="#OnDescripcionColumn" prefWidth="84.0" style="-fx-background-color: #8BFAFF;" text="DESCRIPCION" />
             <TableColumn fx:id="CategoriaColumn" onEditCommit="#OnCategoriaColumn" prefWidth="75.0" style="-fx-background-color: #8BFAFF;" text="CATEGORIA" />
             <TableColumn fx:id="StockColumn" onEditCommit="#OnStockColumn" prefWidth="75.0" style="-fx-background-color: #8BFAFF;" text="STOCK" />
@@ -90,15 +92,10 @@
             <RowConstraints maxHeight="44.0" minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <TextField fx:id="TextCodProducto" maxWidth="200.0" prefHeight="25.0" prefWidth="103.0" promptText="CODPRODUCTO">
+            <TextField fx:id="TextReferencia" maxWidth="200.0" prefHeight="25.0" prefWidth="103.0" promptText="REFRENCIA">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
-               <GridPane.margin>
-                  <Insets left="5.0" right="5.0" />
-               </GridPane.margin>
-            </TextField>
-            <TextField fx:id="TextValor" maxWidth="200.0" promptText="VALOR" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets left="5.0" right="5.0" />
                </GridPane.margin>
@@ -108,17 +105,27 @@
                   <Insets left="5.0" right="5.0" />
                </GridPane.margin>
             </TextField>
-            <TextField fx:id="TextStock" layoutX="244.0" layoutY="17.0" maxWidth="200.0" promptText="STOCK" GridPane.rowIndex="1">
-               <GridPane.margin>
-                  <Insets left="5.0" right="5.0" />
-               </GridPane.margin>
-            </TextField>
             <TextField fx:id="TextCategoria" maxWidth="200.0" promptText="CATEGORIA" GridPane.columnIndex="2">
                <GridPane.margin>
                   <Insets bottom="3.0" left="5.0" top="5.0" />
                </GridPane.margin>
             </TextField>
+            <TextField fx:id="TextStock" layoutX="244.0" layoutY="17.0" maxWidth="200.0" promptText="STOCK" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets left="5.0" right="5.0" />
+               </GridPane.margin>
+            </TextField>
+            <TextField fx:id="TextValor" maxWidth="200.0" promptText="VALOR" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets left="5.0" right="5.0" />
+               </GridPane.margin>
+            </TextField>
          </children>
       </GridPane>
+      <ImageView fx:id="btnCerrar" fitHeight="25.0" fitWidth="23.0" layoutX="38.0" layoutY="25.0" onMouseClicked="#btnCerrar" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../imagenes/atras.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
